syntax = "proto3";

package location;

option java_package = "com.example.realtimelocation.data.location";

message LocationRequest {
  string vin = 1;
}

message LastKnownLocation {
  string vin = 1;
  double longitude = 2;
  double latitude = 3;
  uint64 timestamp  = 4; //unix
}

service LocationService {
  rpc GetLastKnownLocation(LocationRequest) returns (stream LastKnownLocation) {}
}
